letra pra esquerda

--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #1e1e1e;
     color: white;
-    text-align: center;
+    text-align: left;
 }
 
 .chat-container {
