--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Bonito</title>
+    <title>Chat of Mehran</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <div class="chat-container">
-        <h1>Chat Bonito ✨</h1>
+        <h1>Chat of Mehran</h1>
         <div id="chat-box"></div>
 
         <input type="text" id="username" placeholder="Seu nome">
