--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt">
+
+<!-- COMEÇO DO SITE-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat of Mehran</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
+<!--CORPO FAQ-->
+
+<nav>
+<ul class="faq">
+    <li><a href="a">Home</a></li>
+    <li><a href="a">Login</a></li>
+    <li><a href="a">Register</a></li>
+    <li><a href="ceo.html">CEO</a></li>
+    <li><a href="a">Faq</a></li>
+</ul>
+</nav>
+
+<br>
+
+<!--CORPO DO CHAT-->
 <body>
     <div class="chat-container">
         <h1>Chat of Mehran</h1>
@@ -47,5 +64,7 @@
 
         setInterval(loadMessages, 1000);
     </script>
+
+
 </body>
 </html>
