--- a/templates/home.html
+++ b/templates/home.html
@@ -8,15 +8,16 @@
     <title>Chat of Mehran</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
+
 <!--CORPO FAQ-->
 
 <nav>
 <ul class="faq">
-    <li><a href="a">Home</a></li>
-    <li><a href="a">Login</a></li>
-    <li><a href="a">Register</a></li>
+    <li><a href="home.html">Home</a></li>
+    <li><a href="login.html">Login</a></li>
+    <li><a href="register.html">Register</a></li>
     <li><a href="ceo.html">CEO</a></li>
-    <li><a href="a">Faq</a></li>
+    <li><a href="faq.html">Faq</a></li>
 </ul>
 </nav>
 
