--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
+
+<!--CÓDIGO GERAL-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-</head>
+    <link rel="website icon" type="png"
+    href="WebSite Icon.png">
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    </head>
+
+<!--LOGIN-->
 <body>
     <h2>Login</h2>
     <form method="POST">
