--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -2,9 +2,32 @@
 <html>
 <head>
     <title>Perfil</title>
+    <style>
+        .sair-btn {
+            position: fixed;
+            bottom: 15px; /* Fixa o botão na parte inferior */
+            right: 15px; /* Fixa o botão na parte direita */
+        }
+
+        .voltar-btn {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <h2>Perfil de {{ username }}</h2>
-    <a href="/">Voltar</a>
+
+    <div class="sair-btn">
+        <a href="{{ url_for('logout') }}">
+            <button>Sair da Conta de {{ username }}</button>
+        </a>
+    </div>
+
+    <div class="voltar-btn">
+        <a href="/">
+            <button>Voltar</button>
+        </a>
+    </div>
+
 </body>
 </html>
