--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Registro</h2>
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         <input type="text" name="nome" placeholder="Nome" required><br>
         <input type="number" name="idade" placeholder="Idade" required><br>
         <select name="sexualidade" required>
@@ -18,6 +18,11 @@
         </select><br>
         <input type="email" name="email" placeholder="Email" required><br>
         <input type="password" name="senha" placeholder="Senha" required><br>
+
+<!-- Campo para upload da foto -->
+        <label for="foto">Foto de Perfil</label>
+        <input type="file" name="foto" accept="image/*" required><br>
+
         <button type="submit">Registrar</button>
     </form>
     <a href="{{ url_for('login') }}">Já tem uma conta? Faça login</a>
