--- a/templates/login.html
+++ b/templates/login.html
@@ -1,24 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 <head>
-
-<!--CÓDIGO GERAL-->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="website icon" type="png"
-    href="WebSite Icon.png">
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    </head>
-
-<!--LOGIN-->
+</head>
 <body>
-    <h2>Login</h2>
-    <form method="POST">
-        <input type="email" name="email" placeholder="Email" required><br>
-        <input type="password" name="senha" placeholder="Senha" required><br>
-        <button type="submit">Entrar</button>
+    <form method='POST'>
+        Email: <input type='email' name='email' required><br>
+        Senha: <input type='password' name='senha' required><br>
+        <button type='submit'>Entrar</button>
     </form>
-    <a href="{{ url_for('register') }}">Não tem uma conta? Registre-se</a>
+    <p>Não tem uma conta? <a href="{{ url_for('register') }}">Registre-se aqui</a></p>
 </body>
 </html>
