--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Bem-vindo, {{ user[0] }}!</h1>
-    <a href='/perfil'><img src='/static/uploads/{{ user[1] }}' width='50'></a>
-    <a href='/logout'>Sair</a>
+    <a href='/perfil'>Perfil</a>
+    <a href='/perfil'><img src='/static/uploads/{{ user[1] }}' width='80'></a>
 </body>
 </html>
