--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,20 @@
 <html>
 <head>
     <title>Index</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="navbar">
+        <div class="nav-links">
+            <a href="/faq">FAQ</a>
+            <a href="/perfil">Perfil</a>
+            <a href="/search">Search</a>
+        </div>
+        <div class="profile">
+            <a href='/perfil'><img src='/static/uploads/{{ user[1] }}'></a>
+        </div>
+    </div>
+
     <h1>Bem-vindo, {{ user[0] }}!</h1>
-    <a href='/perfil'>Perfil</a>
-    <a href='/perfil'><img src='/static/uploads/{{ user[1] }}' width='80'></a>
 </body>
 </html>
