--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-/* Reset básico */
+/* Reset basico */
 * {
     margin: 0;
     padding: 0;
@@ -13,7 +13,7 @@ body {
     justify-content: center;
     height: 100vh;
     background-color: #f4f4f4;
-    padding-bottom: 50px; /* Espaço para navbar mobile */
+    padding-bottom: 50px; /* Espaco para navbar mobile */
 }
 
 /* Nav Bar */
@@ -23,35 +23,47 @@ body {
     left: 0;
     width: 100%;
     background: #333;
-    padding: 10px 20px;
+    padding: 20px 40px; /* Aumentando o padding da navbar */
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     color: white;
     z-index: 1000;
 }
 
+.nav-container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .nav-links {
     display: flex;
-    gap: 20px;
+    gap: 50px;
+    justify-content: center;
+    align-items: center;
 }
 
 .nav-links a {
     color: white;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 20px; /* Aumentando o tamanho da fonte */
 }
 
+/* Foto de perfil */
 .profile {
+    position: absolute;
+    top: 10px;
+    right: 20px;
     display: flex;
     align-items: center;
 }
 
 .profile img {
-    width: 40px;
-    height: 40px;
+    width: 45px; /* Mantendo o tamanho original da foto de perfil */
+    height: 45px;
     border-radius: 50%;
-    margin-left: 10px;
     object-fit: cover;
 }
 
@@ -62,11 +74,103 @@ body {
         bottom: 0;
         width: 100%;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: center;
         padding: 15px 10px;
     }
 
+    /* Movendo a foto de perfil para o topo à direita na versão mobile */
+    .profile {
+        position: fixed;
+        top: 10px;
+        right: 10px;
+    }
+    
+    .profile img {
+        border: 2px solid #333;
+    }
+
     .nav-links {
-        gap: 10px;
+        gap: 30px;
+    }
+}
+
+/* Estilos para o formulário de mensagens */
+form {
+    margin-top: 20px;
+    text-align: center;
+}
+
+textarea {
+    resize: none;
+    width: 400px;
+    height: 150px;
+    padding: 15px;
+    font-size: 18px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+
+button {
+    position: absolute;
+    bottom: 10px;
+    right: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #303030;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #202020;
+}
+
+/* Estilos para a exibição das mensagens */
+.display-messages {
+    width: 30%;
+    height: 500px;
+    margin: 20px auto;
+    padding: 30px;
+    background-color: #f4f4f4;
+    border-radius: 8px;
+}
+
+.message {
+    margin-bottom: 20px;
+    padding: 15px;
+    background-color: #666666;  
+    border: 1px solid #000000;
+    border-radius: 4px; 
+}
+
+.message p {
+    margin: 6px 0;
+    font-size: 25px;
+}
+
+.message p strong {
+    font-size: 20px;
+}
+
+
+/* Posicionamento do formulário de mensagens */
+.form-message {
+    position: absolute;
+    left: 20px;
+    top: 70px;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+    .display-messages {
+        width: 90%;
+    }
+
+    .form-message {
+        right: 10px;
+        top: 100px;
     }
 }
