--- a/templates/index.html
+++ b/templates/index.html
@@ -40,10 +40,8 @@
     {% endfor %}
 </div>
 <!--END DISPLAY MESSAGES-->
-<br>
-<br>
-<br>
-    <h1>Bem-vindo, {{ user[0] }}!</h1>
-</body>
 
+<div class="EndPag">
+    <p>Fim da página</p>
+</div>
 </html>
