--- a/static/style.css
+++ b/static/style.css
@@ -13,7 +13,7 @@ body {
     justify-content: center;
     height: 100vh;
     background-color: #f4f4f4;
-    padding-bottom: 50px; /* Espaco para navbar mobile */
+    padding-bottom: 50px;
 }
 
 /* Nav Bar */
@@ -22,8 +22,8 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    background: #333;
-    padding: 20px 40px; /* Aumentando o padding da navbar */
+    background: #ff0000;
+    padding: 20px 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -48,7 +48,7 @@ body {
 .nav-links a {
     color: white;
     text-decoration: none;
-    font-size: 20px; /* Aumentando o tamanho da fonte */
+    font-size: 20px;
 }
 
 /* Foto de perfil */
@@ -61,13 +61,33 @@ body {
 }
 
 .profile img {
-    width: 45px; /* Mantendo o tamanho original da foto de perfil */
+    width: 45px;
     height: 45px;
     border-radius: 50%;
     object-fit: cover;
 }
 
-/* Responsivo: navbar embaixo em telas pequenas */
+.perfil {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin: 0 auto; 
+}
+
+.perfil p {
+    text-align: left;
+    width: 100%;
+    margin: 5px 0;
+}
+
+.buttonback {
+    position: fixed;
+    top: 60px;
+    left: 113px;
+    }
+      
+
 @media (max-width: 768px) {
     .navbar {
         top: unset;
@@ -78,7 +98,6 @@ body {
         padding: 15px 10px;
     }
 
-    /* Movendo a foto de perfil para o topo à direita na versão mobile */
     .profile {
         position: fixed;
         top: 10px;
@@ -94,7 +113,6 @@ body {
     }
 }
 
-/* Estilos para o formulário de mensagens */
 form {
     margin-top: 20px;
     text-align: center;
@@ -109,7 +127,6 @@ textarea {
     border-radius: 5px;
     border: 1px solid #ccc;
 }
-
 
 button {
     position: absolute;
@@ -128,7 +145,6 @@ button:hover {
     background-color: #202020;
 }
 
-/* Estilos para a exibição das mensagens */
 .display-messages {
     width: 30%;
     height: 500px;
@@ -154,20 +170,18 @@ button:hover {
 .message p strong {
     font-size: 20px;
 }
+
 .endpag {
     display: flex;
     align-items: center;
 }
 
-
-/* Posicionamento do formulário de mensagens */
 .form-message {
     position: absolute;
     left: 20px;
     top: 70px;
 }
 
-/* Responsividade */
 @media (max-width: 768px) {
     .display-messages {
         width: 90%;
