--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
+
 <!--NAV BAR-->
+<div id="header">
     <div class="navbar">
         <div class="nav-links">
             <a href="/faq">FAQ</a>
@@ -19,25 +21,41 @@
             <a href="/perfil"><img src="{{ url_for('static', filename='uploads/' + user[1]) }}"></a>
         </div>
     </div>
+</div>
 <!--END NAV BAR-->
 
 <!--MESSAGES-->
-<div class="form-message">
-    <form action="/index" method="POST">
-        <textarea name="mensagem" placeholder="Escreva sua mensagem..." required></textarea>
-        <button type="submit">Postar</button>
-    </form>
+<div id="messagesbar">
+    <div class="form-message">
+       <form action="/index" method="POST">
+         <textarea name="mensagem" placeholder="Escreva sua mensagem..." required></textarea>
+         <button type="submit">Postar</button>
+       </form>
+    </div>
 </div>
 <!--END MESSAGES-->
 
 <!--DISPLAY MESSAGES-->
-<div class="display-messages">
-    {% for mensagem, data_postagem, nome in mensagens %}
-        <div class="message">
-            <p><strong>{{ nome }}</strong> | {{ data_postagem.split()[1] }}</p>
-            <p>{{ mensagem }}</p>
-        </div>
-    {% endfor %}
+<div id="main">
+    <div class="display-messages">
+        {% for mensagem, data_postagem, nome in mensagens %}
+           <div class="message">
+             <p><strong>{{ nome }}</strong> | {{ data_postagem.split()[1] }}</p>
+             <p>{{ mensagem }}</p>
+           </div>
+        {% endfor %}
+    </div>
 </div>
 
+<!--SEARCH BAR-->
+<div id="searchbar">
+Aside
+</div>
+<!--END SEARCH BAR-->
+
+<!--FOOTER-->
+<div id="footer">
+Footer
+</div>
+<!--END FOOTER-->
 </html>
