--- a/templates/register.html
+++ b/templates/register.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Registrar</title>
-</head>
-<body>
-    <form method='POST' enctype='multipart/form-data'>
-        Nome: <input type='text' name='nome' required><br>
-        Email: <input type='email' name='email' required><br>
-        Idade: <input type='number' name='idade' required><br>
-        Nacionalidade: <input type='text' name='nacionalidade' required><br>
-        Gênero: 
-        <select name='genero'>
-            <option>Homem</option>
-            <option>Mulher</option>
-            <option>Outro</option>
-        </select><br>
-        Senha: <input type='password' name='senha' required><br>
-        Foto de perfil: <input type='file' name='foto'><br>
-        <button type='submit'>Registrar</button>
+  <head>
+    <title>Registro</title>
+  </head>
+  <body>
+    <h2>Registro</h2>
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+    messages %}
+    <ul>
+      {% for category, msg in messages %}
+      <li style="color: red">{{ msg }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %} {% endwith %}
+
+    <form method="post">
+      Nome real: <input type="text" name="nome_real" required /><br />
+      Apelido (opcional): <input type="text" name="apelido" /><br />
+      Email: <input type="email" name="email" required /><br />
+      Senha: <input type="password" name="senha" required /><br />
+      Confirmar senha:
+      <input type="password" name="senha_confirm" required /><br />
+      <button type="submit">Registrar</button>
     </form>
-</body>
+    <p><a href="/login">Já tenho conta</a></p>
+  </body>
 </html>
