--- a/templates/feed.html
+++ b/templates/feed.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Feed</title>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='style.css') }}"
+    />
   </head>
   <body>
     <h2>Bem-vindo, {{ user.apelido }}</h2>
