--- a/templates/login.html
+++ b/templates/login.html
@@ -23,6 +23,6 @@
       Senha: <input type="password" name="senha" required /><br />
       <button type="submit">Entrar</button>
     </form>
-    <p><a href="/registro">Registrar</a></p>
+<form method="POST" action="{{ url_for('register_user') }}">
   </body>
 </html>
