--- a/templates/feed.html
+++ b/templates/feed.html
@@ -8,28 +8,51 @@
     />
   </head>
   <body>
-    <h2>Bem-vindo, {{ user.apelido }}</h2>
-    <form method="post" action="/postar">
-      <textarea
-        name="conteudo"
-        placeholder="O que você quer dizer?"
-        required
-      ></textarea
-      ><br />
+    <h2>Bem-vindo, {{ user.nickname }}</h2>
+    <form method="post" action="/">
+      {{ form.hidden_tag() }} {{ form.content.label }} {{ form.content() }}<br />
       <button type="submit">Postar</button>
     </form>
     <hr />
-    {% for post in posts %}
-    <b>{{ post.apelido }}</b> disse:<br />
-    {{ post.conteudo }}<br />
-    <small>{{ post.data }}</small>
+    {% if posts %} {% for post in posts %}
+    <div class="post">
+      <b>{{ post.user.nickname }}</b> disse:<br />
+      {{ post.content|e }}<br />
+      <small>{{ post.id }}</small><br />
+      <form
+        action="{{ url_for('like', post_id=post.id) }}"
+        method="POST"
+        style="display: inline"
+      >
+        <button type="submit">❤️ Curtir ({{ post.likes|length }})</button>
+      </form>
+      <form
+        action="{{ url_for('comment', post_id=post.id) }}"
+        method="POST"
+        style="margin-top: 5px"
+      >
+        {{ form.hidden_tag() }}
+        <textarea
+          name="content"
+          required
+          placeholder="Comente aqui..."
+        ></textarea
+        ><br />
+        <button type="submit">Comentar</button>
+      </form>
+      {% for comment in post.comments %}
+      <p>
+        <small
+          ><strong>{{ comment.user.nickname }}:</strong> {{ comment.content
+          }}</small
+        >
+      </p>
+      {% endfor %}
+    </div>
     <hr />
-    {% else %}
-    <form action="{{ url_for('like', post_id=post.id) }}" method="POST">
-      <button type="submit">❤️ Curtir ({{ post.likes | length }})</button>
-    </form>
+    {% endfor %} {% else %}
     <p>Nada publicado ainda.</p>
-    {% endfor %}
-    <p><a href="/logout">Sair</a></p>
+    {% endif %}
+    <p><a href="{{ url_for('logout') }}">Sair</a></p>
   </body>
 </html>
